--- a/Dados/.gitattributes
+++ b/Dados/.gitattributes
@@ -1,2 +1,4 @@
 caso.gz filter=lfs diff=lfs merge=lfs -text
 caso_full.csv filter=lfs diff=lfs merge=lfs -text
+caso_fuçç.csv filter=lfs diff=lfs merge=lfs -text
+caso_full2.csv filter=lfs diff=lfs merge=lfs -text
